--- a/index.html
+++ b/index.html
@@ -130,10 +130,11 @@
 						</p>
 
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.facebook.com/audiovisualarchivetimorleste" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							
 							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://github.com/timorleste" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									
 						</ul>
 						<p class="copyright">&copy; camstl. design: <a href="https://www.facebook.com/audiovisualarchivetimorleste">2019</a>. images: <a href="https://timorleste.github.io/photography">photography</a>. videos: <a href="https://www.facebook.com/audiovisualarchivetimorleste/videos/">cover</a>.</p>
 					</div>
