--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<div class="inner">
+						<h2>CAMSTL</h2>
 						<h2>Centro Audiovisual Max Stahl Timor Leste</h2>
 						<p>Our mission is to help facilitate the newly independent East-Timor in accessing the voices and the key events in its past and fostering an understanding of its unique cultural heritage; to help unite and secure the identity of the country and its people; and to contribute to the forging of a new democratic nation. To ensure the survival of unique resources which contain and communicate the experience and the story of Timor-Leste and to place these at the service of peace and understanding, in Timor-Leste, Regionally and Internationally.
 						</p>
