--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		
 		<meta name="description" content="audiovisual-motion" />
 		<meta name="keywords" content="Timor Leste, Audiovisual, Presentation, Material, Archive, CAMSTL" />
-		<meta name="author" content="T" />
+		<meta name="author" content="Tony Behar" />
 		
 		<link rel="icon" 
                 type="image/png" 
