--- a/index.html
+++ b/index.html
@@ -121,6 +121,12 @@
 
 					</div>
 				</div>
+		
+		
+		
+		
+		<iframe src="https://timorleste.github.io/wasa-diga-av-map" style="border:0px #ffffff none;" name="discovery" scrolling="no" frameborder="0" marginheight="0px" marginwidth="0px" height="500px" width="100%" allowfullscreen></iframe>
+		
 
 			<!-- Footer -->
 				<footer id="footer">
