--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 		
 		
 		
-		<iframe src="https://timorleste.github.io/wasa-diga-av-map" style="border:0px #ffffff none;" name="discovery" scrolling="no" frameborder="0" marginheight="0px" marginwidth="0px" height="570px" width="1200px" allowfullscreen></iframe>
+		<iframe src="https://timorleste.github.io/wasa-diga-av-map" style="border:0px #ffffff none;" name="discovery" scrolling="no" frameborder="0" marginheight="0px" marginwidth="0px" height="570px" width="100%" allowfullscreen></iframe>
 		
 
 			<!-- Footer -->
