--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 	<head>
 		<title>av-motion</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-capable" content="yes">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		
 		
